--- a/orm_migrations/templates/school/students_list.html
+++ b/orm_migrations/templates/school/students_list.html
@@ -6,8 +6,12 @@
 <div class="row">
   <ul>
   {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
+    <li>{{ student.name }} {{ student.group }} </li>
+    <p>Преподаватели:</p>
+    {% for teacher in student.teachers.all %}
+    <p>{{teacher.subject }}: {{ teacher.name }}</p>
   {% endfor %}
+{% endfor %}
   </ul>
 </div>
 {% endblock %}
